--- a/code/01_eda/eda_tod.Rmd
+++ b/code/01_eda/eda_tod.Rmd
@@ -76,8 +76,8 @@ hr_meandepth <- hourly_shark_data %>%
   annotate("rect", xmin = 0, xmax = 6, ymin = 80, ymax = 0, fill = "grey50", alpha = 0.5) +
   annotate("rect", xmin = 18, xmax = 24, ymin = 80, ymax = 0, fill = "grey50", alpha = 0.5) +
   geom_errorbar(aes(ymin = mean_depth-sd_depth, ymax = mean_depth+sd_depth, x = hour), width = 1.5, colour = "grey40", linewidth = 0.2) +
-  #geom_line(aes(x = hour, y = mean_depth), colour = "grey20") +
-  #geom_point(aes(x = hour, y = mean_depth, fill = Season), pch = 21, alpha = 0.5) +
+  geom_line(aes(x = hour, y = mean_depth), colour = "grey20") +
+  geom_point(aes(x = hour, y = mean_depth, fill = Season), pch = 21, alpha = 0.5) +
   #geom_line(aes(x = hour, y = median_depth), colour = "grey20") +
   #geom_point(aes(x = hour, y = median_depth), pch = 21, fill = "green4", colour = "black") +
   scale_fill_manual(values = c("dodgerblue","red", "orange", "darkblue")) +
@@ -90,6 +90,8 @@ hr_meandepth <- hourly_shark_data %>%
         axis.text.x = element_blank()) +
   ylab("Mean depth\n(m ± SD)") + 
   xlab(NULL)
+
+hr_meandepth
 ```
 
 
@@ -132,22 +134,11 @@ hr_sddepth <- hourly_shark_data %>%
 hr_meandepth/hr_sddepth
 
 hr_plot <- ggarrange(hr_meandepth, hr_sddepth, nrow = 2, label.y = 0.5, heights = c(1,0.65))
-
-ggsave(hr_plot, file = "output/hr_plot.pdf", width = 160, height = 100, units = "mm", dpi = 300)
+hr_plot
+ggsave(hr_plot, file = "output/hr_plot.pdf", width = 170, height = 100, units = "mm", dpi = 300)
 
 
 ```
-
-
-
-####### 
-
-
-mutate(tod = case_when(hour %in% (7:16) ~ "Day",
-hour %in% (5:6) ~ "Dawn",
-hour %in% (17:18) ~ "Dusk",
-TRUE ~ "Night")) %>%
-
 
 
 ## Diurnal T/D
