--- a/code/02_model/grouped_models_temp.Rmd
+++ b/code/02_model/grouped_models_temp.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Shark daily temperature ~ depth models"
+title: "Shark daily internal temperature ~ SST models"
 author: "Ben Cresswell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
@@ -84,7 +84,7 @@ Almost 1:1 relationship between SST and max internal body temperature
 ```
 
 ## Plot results
-```{r}
+```{r fig.height = 56/25.4, fig.width = 56/25.4}
 mod1.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -93,16 +93,24 @@ newdata1 <- mod1 %>%
   regrid() %>% 
   as_tibble()
 
-(mod1_plot <- 
+mod1_plot <- 
   ggplot(newdata1, aes(y = emmean, x = SST)) +
+  geom_point(data=shark_daily_td,  aes(y=daily_max_temp, x = SST), fill = "red", col = "black", alpha = 0.4, pch = 21) +
   geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
-  geom_line() +
-  geom_point(data=shark_daily_td,  aes(y=daily_max_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-  theme_minimal() +
+  geom_line(colour = "black") +
  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-  ylab("Daily max shark temp (°C)") + 
-  xlab("\nSST (°C)"))
-ggsave(mod1_plot, file = "output/mod1_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+  ylab("Daily max temp (°C)") + 
+  xlab("SST (°C)") +
+  scale_y_continuous(limits = c(25.4, 30.9), n.breaks = 6) +
+  scale_x_continuous(limits = c(25.4, 30.9), n.breaks = 6) +
+  theme_minimal() +
+  theme(#plot.background = element_rect(colour = "black", linewidth = 1),
+        axis.title.y = element_text(size = 9),
+        axis.title.x = element_text(size = 9))
+
+mod1_plot
+
+ggsave(mod1_plot, file = "output/mod1_plot.pdf", width = 56, height = 56, device = cairo_pdf, units = "mm", dpi = 300)
 ```
 
 ## Add in time-series data
@@ -138,7 +146,7 @@ All look approximately normal
 ```
 
 ## Plot results
-```{r}
+```{r fig.height = 56/25.4, fig.width = 56/25.4}
 mod2a.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -147,16 +155,24 @@ newdata2a <- mod2a %>%
   regrid() %>% 
   as_tibble()
 
-(mod2a_plot <- 
-    ggplot(newdata2a, aes(y = emmean, x = SST)) +
-    geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
-    geom_line() +
-    geom_point(data=shark_daily_td,  aes(y=daily_mean_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
-    # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-    ylab("Daily mean temp (°C)") + 
-    xlab("\nSST (°C)"))
-ggsave(mod2a_plot, file = "output/mod2a_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+mod2a_plot <- 
+  ggplot(newdata2a, aes(y = emmean, x = SST)) +
+  geom_point(data=shark_daily_td,  aes(y=daily_mean_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
+  geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
+  geom_line() +
+  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
+  ylab("Daily mean temp (°C)") + 
+  xlab("SST (°C)") +
+  scale_y_continuous(limits = c(25.4, 30.9), n.breaks = 6) +
+  scale_x_continuous(limits = c(25.4, 30.9), n.breaks = 6) +
+  theme_minimal() +
+  theme(#plot.background = element_rect(colour = "black", linewidth = 1),
+        axis.title.y = element_text(size = 9),
+        axis.title.x = element_text(size = 9))
+
+mod2a_plot
+
+ggsave(mod2a_plot, file = "output/mod2a_plot.pdf", width = 56, height = 56, device = cairo_pdf, units = "mm", dpi = 300)
 ```
 
 ## Add in time-series data
@@ -193,7 +209,7 @@ mod2b %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height = 56/25.4, fig.width = 56/25.4}
 mod2b.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -202,16 +218,23 @@ newdata2b <- mod2b %>%
   regrid() %>% 
   as_tibble()
 
-(mod2b_plot <- 
+mod2b_plot <- 
     ggplot(newdata2b, aes(y = emmean, x = SST)) +
     geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
     geom_line() +
     geom_point(data=shark_daily_td,  aes(y=daily_temp_sd, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-    ylab("Std deviation in\ndaily temps (°C)") + 
-    xlab("\nSST (°C)"))
-ggsave(mod2b_plot, file = "output/mod2b_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+    ylab("Std. dev. daily temp (°C)") + 
+    xlab("SST (°C)") +
+    theme_minimal() +
+    theme(#plot.background = element_rect(colour = "black", linewidth = 1),
+        axis.title.y = element_text(size = 9),
+        axis.title.x = element_text(size = 9))
+
+
+mod2b_plot
+
+ggsave(mod2b_plot, file = "output/mod2b_plot.pdf", width = 62, height = 62, device = cairo_pdf, units = "mm", dpi = 300)
 ```
 
 
@@ -239,7 +262,7 @@ mod2c %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height = 56/25.4, fig.width = 56/25.4}
 mod2c.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -284,7 +307,7 @@ mod3 %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height = 56/25.4, fig.width = 56/25.4}
 mod3.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -293,16 +316,25 @@ newdata3 <- mod3 %>%
   regrid() %>% 
   as_tibble()
 
-(mod3_plot <- 
+mod3_plot <- 
   ggplot(newdata3, aes(y = emmean, x = SST)) +
+  geom_point(data=shark_daily_td,  aes(y=daily_min_temp, x = SST), fill = "midnightblue", col = "black", alpha = 0.4, pch = 21) +
   geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
   geom_line() +
-  geom_point(data=shark_daily_td,  aes(y=daily_min_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
   theme_minimal() +
  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
   ylab("Daily min temp (°C)") + 
-  xlab("\nSST (°C)"))
-ggsave(mod3_plot, file = "output/mod3_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+  xlab("SST (°C)") +
+  #scale_y_continuous(limits = c(25, 30.5), n.breaks = 6) +
+  #scale_x_continuous(limits = c(25, 30.5), n.breaks = 6) +
+  theme_minimal() +
+  theme(#plot.background = element_rect(colour = "black", linewidth = 1),
+        axis.title.y = element_text(size = 9),
+        axis.title.x = element_text(size = 9))
+
+mod3_plot
+
+ggsave(mod3_plot, file = "output/mod3_plot.pdf", width = 56, height = 56, device = cairo_pdf, units = "mm", dpi = 300)
 ```
 
 
@@ -318,170 +350,7 @@ ggsave(daily_min_temp_model_plot, file = "output/daily_min_temp_model_plot.pdf",
 
 
 
-##### Model 4: Daily Max Depth ~ SST #####
-
-## Model formula
 ```{r}
-mod4 <- glm(daily_max_depth ~ SST, data = shark_daily_td, family = gaussian)
+# ENDS
 ```
-
-## Model validation
-```{r}
-# Dharma resids
-mod4 %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod4 %>% performance::check_outliers()
-mod4 %>% performance::r2()
-```
-
-## Results
-```{r}
-(mod4results <- mod4 %>% tidy(conf.int=TRUE))
-```
-
-## Plot results
-```{r}
-mod4.grid <- shark_daily_td %>% 
-  with(list(SST = seq_range(SST, n = 100)))
-
-newdata4 <- mod4 %>% 
-  emmeans(~SST, at = mod4.grid) %>% 
-  regrid() %>% 
-  as_tibble()
-
-(mod4_plot <- 
-  ggplot(newdata4, aes(y = emmean, x = SST)) +
-  geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
-  geom_line() +
-  geom_point(data=shark_daily_td,  aes(y=daily_max_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-  theme_minimal() +
- # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-  ylab("Daily max depth (m)") + 
-  xlab("\nSST (°C)"))
-ggsave(mod4_plot, file = "output/mod4_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
-```
-
-
-
-## Add in time-series data
-```{r  fig.width = 180/25.4, fig.height = 60/25.4}
-(daily_max_depth_model_plot <- ggarrange(MaxDep_SST_plot, mod4_plot, ncol = 2, widths = c(2,1)))
-ggsave(daily_max_depth_model_plot, file = "output/daily_max_depth_model_plot.pdf", width = 180, height = 60, units = "mm", dpi = 300)
-
-```
-
-##### Model 5: Daily Mean Depth ~ SST #####
-
-
-## Model formula
-```{r}
-mod5 <- glm(daily_mean_depth ~ SST, data = shark_daily_td, family = gaussian)
-```
-
-## Model validation
-```{r}
-# Dharma resids
-mod5 %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod5 %>% performance::check_outliers()
-mod5 %>% performance::r2()
-```
-
-## Results
-```{r}
-(mod5results <- mod5 %>% tidy(conf.int=TRUE))
-```
-
-## Plot results
-```{r}
-mod5.grid <- shark_daily_td %>% 
-  with(list(SST = seq_range(SST, n = 100)))
-
-newdata5 <- mod5 %>% 
-  emmeans(~SST, at = mod5.grid) %>% 
-  regrid() %>% 
-  as_tibble()
-
-(mod5_plot <- 
-    ggplot(newdata5, aes(y = emmean, x = SST)) +
-    geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
-    geom_line() +
-    geom_point(data=shark_daily_td,  aes(y=daily_mean_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
-    # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-    ylab("Daily mean depth (m)") + 
-    xlab("\nSST (°C)") +
-    scale_y_continuous(limits = c(0,200)))
-
-ggsave(mod5_plot, file = "output/mod5_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
-```
-
-
-
-## Add in time-series data
-```{r  fig.width = 180/25.4, fig.height = 60/25.4}
-(daily_mean_depth_model_plot <- ggarrange(shark_da, mod5_plot, ncol = 2, widths = c(2,1)))
-ggsave(daily_mean_depth_model_plot, file = "output/daily_mean_depth_model_plot.pdf", width = 180, height = 60, units = "mm", dpi = 300)
-
-```
-
-
-
-##### Model 6: Daily Min Depth ~ SST #####
-
-
-## Model formula
-```{r}
-mod6 <- glm(daily_min_depth ~ SST, data = shark_daily_td, family = negative.binomial(2)) # nb capacity comes from MASS package
-```
-
-## Model validation
-```{r}
-# Dharma resids
-mod6 %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod6 %>% performance::check_outliers()
-mod6 %>% performance::r2()
-```
-
-## Results
-```{r}
-(mod6results <- mod6 %>% tidy(conf.int=TRUE))
-```
-
-## Plot results
-```{r}
-mod6.grid <- shark_daily_td %>% 
-  with(list(SST = seq_range(SST, n = 100)))
-
-newdata6 <- mod6 %>% 
-  emmeans(~SST, at = mod6.grid) %>% 
-  regrid() %>% 
-  as_tibble()
-
-(mod6_plot <- 
-    ggplot(newdata6, aes(y = response, x = SST)) +
-    geom_ribbon(aes(ymin = asymp.LCL, ymax = asymp.UCL), color=NA, alpha=0.3) +        # Had to change the ymin and max names as the model conducted in MASS
-    geom_line() +
-    geom_point(data=shark_daily_td,  aes(y=daily_min_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
-    # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-    ylab("Daily min depth (m)") + 
-    xlab("\nSST (°C)"))
-ggsave(mod6_plot, file = "output/mod6_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
-```
-
-
-
-## Add in time-series data
-```{r  fig.width = 180/25.4, fig.height = 60/25.4}
-(daily_min_depth_model_plot <- ggarrange(minDep_SST_plot, mod6_plot, ncol = 2, widths = c(2,1)))
-ggsave(daily_min_depth_model_plot, file = "output/daily_min_depth_model_plot.pdf", width = 180, height = 60, units = "mm", dpi = 300)
-
-```
-
-
-
-
-
-
-
-
 
