--- a/code/02_model/individual_model_final.Rmd
+++ b/code/02_model/individual_model_final.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
 
 
 ```{r include=FALSE}
-rm(list=ls()) # Clear out environment if necessary
+#rm(list=ls()) # Clear out environment if necessary
 source("code/packages.R")
 ```
 
