--- a/code/02_model/individual_model_trials.Rmd
+++ b/code/02_model/individual_model_trials.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
 
 
 ```{r include=FALSE}
-rm(list=ls()) # Clear out environment if necessary
+#rm(list=ls()) # Clear out environment if necessary
 source("code/packages.R")
 ```
 
@@ -131,6 +131,7 @@ sst_maxd_final %>% performance::r2_nakagawa()
 summary(sst_maxd_final)
 # Summary of random effects
 sst_maxd_final %>% ranef()
+
 ```
 
 
